# camp_zipnerf

./: pyproject.toml
camp_zipnerf/: eval.py
configs/zipnerf/: 360.gin
scripts/: my_run.sh
