[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "camp_zipnerf"
version = "0.0.2"
dependencies = [
]
authors = [
    {name = "Jonathan T. Barron"},
]
description = "Official implementation of Zip-NeRF."

license = {file = "LICENSE"}
readme = "README.md"

[tool.setuptools.packages.find]
where = [""]
include = ["camp_zipnerf*"]  # only publish one folder: "camp_zipnerf"

